# 1brc_rs

./: Cargo.toml  README.md
benches/: bench_1brc.rs
src/: lib.rs  main.rs
