[package]
name = "rs_1brc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash           = "1.1.0"
nohash               = "0.2.0"
criterion            = "0.5.1"
itertools            = "0.12.1"
rayon                = "1.9.0"
similar              = "2.4.0"
rand = "0.9.0-alpha.0"

[[bench]]
name = "bench_1brc"
harness = false

[profile.release]
#debug = true
lto = true